--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 left-0 w-full bg-white shadow z-50">
+<nav class="fixed top-0 left-0 w-full bg-white  z-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-18">
             <div class="flex flex-shrink-0 flex-row gap-10">
