--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;700&display=swap');
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(200, 198, 196);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+width: 10px;
+height:10px;
+}
+ */
