Metricas para vercel

--- a/src/pages/privacyPolicy.astro
+++ b/src/pages/privacyPolicy.astro
@@ -17,9 +17,8 @@ import Layout from "../layouts/Layout.astro";
             <div class="text-gray-500 text-lg">
                 <div class="">
                     <div>
-                        <br>
-                        <p>Última actualización: 28 de julio de 2025</p>
-                        <br>
+                        <p class="mb-6">Última actualización: 28 de julio de 2025</p>
+
                         <p>
                             Letra Viva gestiona de esta tienda y este sitio web,
                             incluidos los datos, el contenido, las funciones,
