Trabajando en la página principal

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,12 +22,12 @@
 
                 <div class="hidden md:flex space-x-8 items-center">
                     <a
-                        href="#"
+                        href="/"
                         class="px-2 py-0.5 rounded-md font-medium bg-[#BFD4C6] text-white text-md"
                         >Inicio</a
                     >
                     <a
-                        href="#"
+                        href="/personalizedSong"
                         class="px-3 py-2 rounded-md text-gray-700 hover:text-green-600"
                         >Crea Tu Canción Personalizada</a
                     >
