Se cambia la bienvenida y se crea una sección en la cual el usuario puede explorar los diferentes paques

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,10 +2,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-18">
             <div class="flex flex-shrink-0 flex-row gap-10">
-                <a
-                    href="/"
-                    class="header__heading-link link link--text focus-inset"
-                >
+                <a href="/" class="header__heading-link link link--text focus-inset">
                     <div class="header__heading-logo-wrapper">
                         <img
                             src="//letravivaoficial.com/cdn/shop/files/LOGO_RECORTADO_SHOPIFY_02f1e371-0d7c-41b0-9ae4-d5709067481a.png?v=1753490877&width=600"
@@ -23,7 +20,7 @@
                 <div class="hidden md:flex space-x-8 items-center">
                     <a
                         href="/"
-                        class="px-2 py-0.5 rounded-md font-medium bg-[#BFD4C6] text-white text-md"
+                        class="px-2 py-0.5 rounded-md font-medium bg-[#00343d] text-white text-md"
                         >Inicio</a
                     >
                     <a
