--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Navbar from "../components/Navbar.astro";
 	</head>
 	<body>
 		<Navbar/>
-		<div class="max-w-7xl mx-auto">
+		<div >
 			<slot/>
 		</div>
 		<SpeedInsights/>
