--- a/src/pages/personalizedSong.astro
+++ b/src/pages/personalizedSong.astro
@@ -1,9 +1,9 @@
 ---
 //import ProductList from "../components/shopify/ProductList";
 import Layout from "../layouts/Layout.astro";
-import { fetchAdminProducts } from "../lib/shopify.server";
+//import { fetchAdminProducts } from "../lib/shopify.server";
 
-const products = await fetchAdminProducts(); // SSR fetch
+//const products = await fetchAdminProducts(); // SSR fetch
 ---
 
 <Layout title="Canción Personalizada | Letra Viva" description="Crea una canción personalizada para esa persona especial. Regala emociones y momentos inolvidables con nuestra canción única y hecha a medida.">
