Se agregar las calificaciones y porque elegir letra viva con una tabla de comparativos. Se añade sección con un carrucel con imagesnes de WhatsApp y se pone la selección de los paquetes.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import  SpeedInsights  from "@vercel/speed-insights/astro"
 import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
+import Banner from "../components/Banner.astro";
 ---
 
 <!doctype html>
@@ -15,7 +16,7 @@ import Navbar from "../components/Navbar.astro";
 	</head>
 	<body>
 		<Navbar/>
-		<div >
+		<div >			
 			<slot/>
 		</div>
 		<SpeedInsights/>
