--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,38 @@
 ---
+import Features from '../components/Features.astro';
+import Package from '../components/Package.astro';
+import Waves from '../components/Waves.astro';
 import Welcome from '../components/Welcome.astro';
+import WhatsAppCarrot from '../components/WhatsAppCarrot.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>	
 	<Welcome />
+	<div class="px-4 md:px-6 lg:px-8">
+		<Features/>
+		<WhatsAppCarrot/>
+		<Package/>
+	</div>
+
+	<Waves />
+	<footer class="bg-[#083335] text-gray-400 py-6">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+			<!-- Enlaces -->
+			<div class="flex flex-wrap justify-center space-x-6 mb-4 mt-5">
+				<a href="#" class="hover:underline">Política De Privacidad</a>
+				<a href="#" class="hover:underline">Política De Envíos</a>
+				<a href="#" class="hover:underline">Política De Reembolso</a>
+				<a href="#" class="hover:underline">Términos y Condiciones</a>
+			</div>
+
+			<!-- Info contacto -->
+			<p class="mb-4">Información de Contacto</p>
+		</div>
+
+		<div>
+			<hr class="border-gray-800 my-4 w-full" />
+			<p class="text-xs px-20 py-2 text-white/60">© 2025, Letra Viva.</p>
+		</div>
+	</footer>
 </Layout>
