Anexo de videos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Waves from '../components/Waves.astro';
 import Welcome from '../components/Welcome.astro';
 import WhatsAppCarrot from '../components/WhatsAppCarrot.astro';
 import Layout from '../layouts/Layout.astro';
+import ExcitingVideos from '../components/ExcitingVideos.astro';
 ---
 
 <Layout>	
@@ -13,6 +14,7 @@ import Layout from '../layouts/Layout.astro';
 		<Features/>
 		<WhatsAppCarrot/>
 		<Package/>
+		<ExcitingVideos/>
 	</div>
 
 	<Waves />
