--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Welcome from '../components/Welcome.astro';
 import WhatsAppCarrot from '../components/WhatsAppCarrot.astro';
 import Layout from '../layouts/Layout.astro';
 import ExcitingVideos from '../components/ExcitingVideos.astro';
+import Music from '../components/Music.astro';
+import Questions from '../components/Questions.astro';
 ---
 
 <Layout>	
@@ -14,8 +16,10 @@ import ExcitingVideos from '../components/ExcitingVideos.astro';
 		<Features/>
 		<WhatsAppCarrot/>
 		<Package/>
-		<ExcitingVideos/>
+		<ExcitingVideos />
 	</div>
+	<Music/>
+	<Questions/>
 
 	<Waves />
 	<footer class="bg-[#083335] text-gray-400 py-6">
