--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,11 +11,11 @@ import Package from "./Package.astro";
 	<section class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-br from-[oklch(0.35_0.10_200)] via-[#00343d] to-[#00343d]">
 		
 		<div class="absolute inset-0 z-0">
-			<img
+		<!-- 	<img
 				alt="Pareja feliz en auto"
 				class="w-full h-full object-cover opacity-30"
 				src="//letravivaoficial.com/cdn/shop/files/PAGINA_DE_INICIO.png?v=1753674589&width=3840"
-			/>
+			/> -->
 			<div
 				class="absolute inset-0 bg-gradient-to-t from-[oklch(0.35_0.10_200)] via-[oklch(0.35_0.10_200)]/80 to-transparent"
 			>
@@ -88,7 +88,8 @@ import Package from "./Package.astro";
 								r="3"></circle><circle cx="18" cy="16" r="3"
 							></circle></svg
 						>Pide Tu Canción Personalizada</button
-					><button
+					>
+					<button
 						data-slot="button"
 						class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shadow-xs dark:bg-input/30 dark:border-input dark:hover:bg-input/50 rounded-md has-[>svg]:px-4 border-2 border-white text-white hover:bg-white hover:text-[oklch(0.35_0.10_200)] text-lg px-8 py-6 h-auto bg-transparent"
 						><svg
